<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">pargolfplus</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_jun">Jun</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_jul">Jul</string>
    <string name="lbl_63">63</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
    <string name="lbl_november">November</string>
    <string name="msg_november_30_20">November 30, 2022</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="lbl_courses">Courses</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_first_name">First name</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="msg_the_mines_resor">The Mines Resort &amp; Golf Club</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_score">Score</string>
    <string name="lbl_stroke_play">Stroke Play</string>
    <string name="lbl_ready">Ready</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="msg_input_first_nam">Input first name</string>
    <string name="lbl_55">+55</string>
    <string name="lbl_low">Low</string>
    <string name="lbl_go_to_next_hole">Go To Next Hole</string>
    <string name="lbl_average_today">Average Today</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_wed">WED</string>
    <string name="msg_september_15_2">September 15, 2022</string>
    <string name="lbl_philip_low">Philip Low</string>
    <string name="lbl_selangor">Selangor</string>
    <string name="msg_start_a_new_rou">Start A New Round</string>
    <string name="msg_check_your_stat">Check Your Statistics</string>
    <string name="lbl_index">Index</string>
    <string name="lbl_41">41</string>
    <string name="lbl_par2">PAR</string>
    <string name="lbl_40">40</string>
    <string name="lbl_save_changes">Save Changes</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_player">Player</string>
    <string name="lbl_strokes">Strokes</string>
    <string name="lbl_402">+40</string>
    <string name="lbl_mon2">Mon</string>
    <string name="lbl_input_password">Input password</string>
    <string name="lbl_create_password">Create password</string>
    <string name="msg_saujana_golf">Saujana Golf &amp; Country Club</string>
    <string name="lbl_view_all">View All</string>
    <string name="lbl_phillip_low">Phillip Low</string>
    <string name="lbl_30">30</string>
    <string name="lbl_lowest">Lowest</string>
    <string name="lbl_35">35</string>
    <string name="lbl_that_s_a_lot">"that's a lot"</string>
    <string name="lbl_32">+32</string>
    <string name="lbl_33">+33</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_38">+38</string>
    <string name="lbl_39">39</string>
    <string name="lbl_fri">FRI</string>
    <string name="lbl_112">112</string>
    <string name="lbl_hole">Hole</string>
    <string name="msg_bukit_kemuning">Bukit Kemuning Golf &amp; Country Club</string>
    <string name="lbl_113">113</string>
    <string name="msg_statistic_track">Statistic tracker</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_in_the_process">in the process</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_highest">Highest</string>
    <string name="msg_october_11_202">October 11, 2022</string>
    <string name="lbl_philip">Philip</string>
    <string name="lbl_25">25</string>
    <string name="lbl_hi_philip">Hi, Philip</string>
    <string name="lbl_hole2">Hole  </string>
    <string name="lbl_106">106</string>
    <string name="msg_tropicana_golf">Tropicana Golf &amp; Country Club</string>
    <string name="msg_type_to_search">Type to search...</string>
    <string name="lbl_log_in">log in</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_change_password">Change password</string>
    <string name="lbl_playing_history">Playing History</string>
    <string name="lbl_january_2_2023">January 2, 2023</string>
    <string name="lbl_start_round">Start Round</string>
    <string name="lbl_97">97</string>
    <string name="lbl_login3">Login </string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_11">11</string>
    <string name="lbl_sign_up2">Sign Up</string>
    <string name="msg_petaling_jaya">Petaling Jaya, Selangor</string>
    <string name="lbl_16">16</string>
    <string name="msg_by_creating_a_n2">By creating a new account, you agree to the</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_18">18</string>
    <string name="lbl_input_username">Input username</string>
    <string name="lbl_and">and</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_hcp">HCP</string>
    <string name="lbl">/</string>
    <string name="lbl_change_photo">Change Photo</string>
    <string name="msg_glenmarie_golf">Glenmarie Golf &amp; Country Club</string>
    <string name="msg_by_creating_a_n">By creating a new account, you agree to the Terms of Service and Privacy Policy</string>
    <string name="lbl_85">85</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_kuala_lumpur">Kuala Lumpur</string>
    <string name="lbl_hi">Hi,</string>
    <string name="lbl_01">01</string>
    <string name="lbl_02">02</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_00">00</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_05">05</string>
    <string name="lbl_6">6</string>
    <string name="lbl_06">06</string>
    <string name="lbl_7">7</string>
    <string name="lbl_03">03</string>
    <string name="msg_settings_secu">Settings &amp; Security</string>
    <string name="lbl_8">8</string>
    <string name="lbl_04">04</string>
    <string name="lbl_aug">Aug</string>
    <string name="lbl_9">9</string>
    <string name="lbl_09">09</string>
    <string name="msg_i_always_think">\u201cI always think under par.
 You have to believe in yourself.\u201d</string>
    <string name="lbl_07">07</string>
    <string name="lbl_08">08</string>
    <string name="msg_handicap_histor">Handicap History</string>
    <string name="lbl_handicap">Handicap</string>
    <string name="msg_find_a_place_to">Find a place to play golf</string>
    <string name="lbl_par">PAR</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_input_last_name">Input last name</string>
    <string name="lbl_other">Other</string>
    <string name="msg_terms_of_servic">Terms of Service</string>
    <string name="lbl_average">Average</string>
    <string name="lbl_statistic">Statistic</string>
    <string name="lbl_scoring">Scoring</string>
    <string name="msg_klgcc_kuala_lum">KLGCC Kuala Lumpur Golf &amp; Country Club</string>
    <string name="msg_january_23_202">January 23, 2023</string>
    <string name="lbl_finish_round">Finish Round</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="tee">Tee:</string>
    <string name="tee_white">White</string>
    <string name="tee_blue">Blue</string>
    <string name="tee_red">Red</string>
    <string name="msg_please_select_a2">Please select a course:</string>
    <string name="msg_please_select_a">Please select a Tee Color:</string>
    <string name="lbl_pcc_adjustment">PCC adjustment:</string>
    <string name="lbl_hole_04">Hole 04</string>
    <string name="lbl_hole_05">Hole 05</string>
    <string name="lbl_hole_02">Hole 02</string>
    <string name="lbl_hole_03">Hole 03</string>
    <string name="lbl_hole_08">Hole 08</string>
    <string name="lbl_hole_09">Hole 09</string>
    <string name="lbl_hole_06">Hole 06</string>
    <string name="lbl_hole_07">Hole 07</string>
    <string name="lbl_hole_01">Hole 01</string>
    <string name="lbl_hole_15">Hole 15</string>
    <string name="lbl_hole_16">Hole 16</string>
    <string name="lbl_hole_13">Hole 13</string>
    <string name="lbl_hole_14">Hole 14</string>
    <string name="lbl_hole_17">Hole 17</string>
    <string name="lbl_hole_18">Hole 18</string>
    <string name="lbl_hole_12">Hole 12</string>
    <string name="lbl_hole_10">Hole 10</string>
    <string name="lbl_hole_11">Hole 11</string>
    <string name="lbl_save_results">Save Results</string>
    <string name="lbl_34">-3</string>
    <string name="msg_score_different">Score Differential:</string>
    <string name="lbl_total_score">Total Score:</string>
    <string name="lbl_tee_colour">Tee Colour:</string>
    <string name="lbl_results">Results</string>
    <string name="lbl_24_5">24.5</string>
    <string name="lbl_120">120</string>
    <string name="clubs">Choose a Club</string>
    <string name= "lbl_bukit_jalil">Bukit Jalil</string>
    <string name= "lbl_golfplus">GOLF+</string>
</resources>
