<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="statisticsVM"
            type="com.pgp.app.modules.statistics.data.viewmodel.StatisticsVM"/>
        <variable
            name="statisticsRowModel"
            type="com.pgp.app.modules.statistics.data.model.StatisticsRowModel" />

    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumntitle1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100cornerRadius">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowtitle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumntitle2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_weight="0.77" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:id="@+id/txtClub"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:text="@{statisticsVM.statisticsModel.txtTitle}"
                    style="@style/txtIntersemibold14" tools:text="@string/msg_glenmarie_golf"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMonth"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{statisticsVM.statisticsModel.txtMonth}"
                    style="@style/txtInterregular12_1" tools:text="@string/msg_january_23_202"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tee" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_4pxv"
                        android:layout_weight="1"
                        android:text="@string/tee_blue" />

                </LinearLayout>

            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOneHundredThirteen"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="0.23" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{statisticsVM.statisticsModel.txtOneHundredThirteen}"
                style="@style/txtInterbold36" tools:text="@string/lbl_106"/>

        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowmusic1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowmusic2"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.8" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMusic"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_music"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_music"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEighteen"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.14"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{statisticsVM.statisticsModel.txtEighteen}"
                    style="@style/txtInterregular12_1" tools:text="@string/lbl_18"/>
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineOne"
                    android:layout_height="@dimen/_16pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.01" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtStableford"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.71"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{statisticsVM.statisticsModel.txtStableford}"
                    style="@style/txtInterregular12_1" tools:text="@string/lbl_stroke_play"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBadgeBadgeWit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginStart="@dimen/_129pxh"
                android:layout_weight="0.2" android:layout_width="0dp"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_2pxv"
                android:singleLine="true"
                android:text="@{statisticsVM.statisticsModel.txtBadgeBadgeWit}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_38"/>
        </LinearLayout>
    </LinearLayout>
</layout>
