<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="statisticsRowModel" type="com.pgp.app.modules.statistics.data.model.StatisticsRowModel"/>
    </data>

    <LinearLayout
        android:id="@+id/linearColumnthirty"
        style="@style/groupStyleindigo_A100cornerRadius"
        android:layout_width="@dimen/_80pxv"
        android:layout_height="@dimen/_120pxh"
        android:layout_marginRight="@dimen/_33pxv"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtThirty"
            style="@style/txtIntersemibold35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{statisticsRowModel.txtThirty}"
            tools:text="@string/lbl_30" />

        <TextView
            android:id="@+id/txtHCP"
            style="@style/txtInterregular15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{statisticsRowModel.txtHCP}"
            tools:text="@string/lbl_hcp" />

        <LinearLayout
            android:id="@+id/linearRowaverage"
            android:layout_width="@dimen/_80pxv"
            android:layout_height="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_7pxv"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAverage"
                style="@style/txtInterregular13"
                android:layout_width="@dimen/_50pxv"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_2pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{statisticsRowModel.txtAverage}"
                android:textAlignment="center"
                tools:text="@string/lbl_average" />

            <TextView
                android:id="@+id/txtJun"
                style="@style/txtInterregular13"
                android:layout_width="@dimen/_25pxv"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_2pxh"
                android:layout_marginBottom="@dimen/_2pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{statisticsRowModel.txtJun}"
                tools:text="@string/lbl_jun" />
        </LinearLayout>

    </LinearLayout>
</layout>
