<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="courses20VM" type="com.pgp.app.modules.courses20.data.viewmodel.Courses20VM"/>
    </data>
    <FrameLayout android:id="@+id/frameCourses20"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <ImageView android:id="@+id/clubimage1"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_9pxh}"
            imageRes="@{@drawable/img_image_852x393}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image_852x393"/>
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_65pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_7pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>

            <TextView
                android:id="@+id/clubnamescore10"
                style="@style/txtInterbold24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_473pxv"
                android:gravity="center_horizontal|left"
                android:text="@{courses20VM.courses20Model.txtMeadowSprings}"
                tools:text="@string/msg_glenmarie_golf" />
            <TextView android:ellipsize="end"
                android:id="@+id/state1"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{courses20VM.courses20Model.txtSelangor}"
                style="@style/txtIntersemibold12" tools:text="@string/lbl_selangor"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnStartRound"
                android:layout_gravity="start"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_156pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_start_round"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline_1" tools:text="@string/lbl_start_round"/>
        </LinearLayout>
    </FrameLayout>
</layout>
